# llm-finetune-pipeline

./: .editorconfig  .gitignore  .rumdl.toml  cspell.json  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml  train.yaml
api/: pyproject.toml
lib/: pyproject.toml
lib/llm_finetune/: exceptions.py  inference.py  model.py  schemas.py
scripts/: dvc-repro-and-report.sh  lint-and-test.sh
templates/scripts/: training_report.md.j2
tests/: test_placeholder.py
tests/lib/: test_inference.py  test_model.py  test_schemas.py
tests/train/: test_templating.py
train/: pyproject.toml
train/llm_finetune_train/: __main__.py  exceptions.py
train/llm_finetune_train/reports/: __init__.py  templating.py
