[project]
name = "llm-finetune"
version = "0.1.0"
description = "Core library for LLM fine-tuning pipeline"
authors = [{ name = "Alex Mikheev" }]
requires-python = ">=3.13"
dependencies = []

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
